Add a header in index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>I just watched Deadpool 2</title>
   </head>
   <body>
+    <h1>Deadpool 2 is not that good,ew!</h1>
 Hello there, awesome person!
   </body>
 </html>
