--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <li>Not too much fun</li>
       <li>I love Yukio</li>
     </ol>
+    <a href="https://github.com">This is a link to GitHub!</a>
   </body>
 </html>
