--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>I just watched Deadpool 2</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Deadpool 2 is not that good,ew!</h1>
